# SENTINEL

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_SUMMARY.md  Cargo.toml  KILLER_FEATURES_ANALYSIS.md  LAYER5_PLAN.md  LAYER6_PLAN.md  PROJECT_EVOLUTION.md  README.md  README_WORLD_CLASS.md  agent_network_visualizer.html  install.sh  sentinel-extension.vsix  sentinel-real-data.vsix  sentinel-vscode-2.0.1.vsix  sentinel.json  sentinel_llm_config.json  sentinel_mcp_config.json  sentinel_webview_demo.html
.githooks/: pre-commit
.github/workflows/: ci.yml  quality-gates.yml
.idx/: dev.nix
.sentinel/: chat_memory.json  chat_memory_export.json  world_model.json
.sentinel/innovation/: team_memory_graph.json
.sentinel/quality/: harness-20260212T232233Z.json
benchmarks/: README.md  compare-results.sh  run-benchmark.sh
benchmarks/scenarios/: compaction-benchmark.json  large-project.json  medium-project.json  quality-evaluation.json  small-project.json
crates/sentinel-agent-native/: Cargo.toml
crates/sentinel-agent-native/examples/: e2e_agent_communication.rs  e2e_gemini_reasoning.rs  gemini_cli_real_test.rs  real_world_test.rs  unified_provider_example.rs
crates/sentinel-agent-native/src/: agent_communication_llm.rs  codegen.rs  consensus.rs  context.rs  context_provider.rs  end_to_end_agent.rs  gateway.rs  lib.rs  llm_integration.rs  mod.rs  openrouter.rs  orchestrator.rs  planning.rs  reasoning.rs  sandbox_adapter.rs
crates/sentinel-agent-native/src/llm_integration/: tests.rs
crates/sentinel-agent-native/src/orchestrator/: tests.rs
crates/sentinel-agent-native/src/providers/: anthropic.rs  gemini.rs  gemini_cli.rs  mod.rs  openai_compatible.rs  router.rs  unified.rs
crates/sentinel-agent-native/src/swarm/: agent.rs  balancer.rs  circuit_breaker.rs  communication.rs  conflict.rs  consensus.rs  emergence.rs  human_in_the_loop.rs  llm.rs  marketplace.rs  memory.rs  mod.rs  parser.rs  predictor.rs  smart_routing.rs
crates/sentinel-agent-native/tests/: agent_communication_integration_test.rs  stress_test_full_stack.rs  swarm_integration_test.rs
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: generate.rs  lsp.rs  main.rs  mcp.rs  reliability.rs  tui.rs
crates/sentinel-core/: Cargo.toml  README.md
crates/sentinel-core/examples/: collaborative_agents.rs
crates/sentinel-core/src/: error.rs  evidence.rs  execution.rs  guardrail.rs  killer_orchestrator.rs  lib.rs  security.rs  types.rs
crates/sentinel-core/src/alignment/: field.rs  mod.rs  simulator.rs  state.rs  vector.rs
crates/sentinel-core/src/architect/: distiller.rs  engine.rs  mod.rs
crates/sentinel-core/src/cognitive_state/: action.rs  belief.rs  decision.rs  meta_state.rs  mod.rs  state.rs
crates/sentinel-core/src/consensus_validation/: mod.rs
crates/sentinel-core/src/distributed_memory/: mod.rs
crates/sentinel-core/src/federation/: consensus.rs  gossip.rs  mod.rs  network.rs
crates/sentinel-core/src/goal_manifold/: atomic.rs  dag.rs  goal.rs  mod.rs  predicate.rs  predicate_sandbox.rs  slicer.rs
crates/sentinel-core/src/intent_preservation/: mod.rs
crates/sentinel-core/src/killer_features/: mod.rs
crates/sentinel-core/src/learning/: classifier.rs  knowledge_base.rs  mod.rs  pattern_mining.rs  strategy.rs  types.rs
crates/sentinel-core/src/memory/: embeddings.rs  episodic.rs  manifold.rs  mod.rs  semantic.rs  working.rs
crates/sentinel-core/src/memory/compaction/: engine.rs  frames.rs  mod.rs  policy.rs
crates/sentinel-core/src/outcome_compiler/: agent_communication.rs  compiler.rs  interpreter.rs  mod.rs  orchestrator.rs  scaffold.rs  templates.rs
crates/sentinel-core/src/quality/: evaluation.rs  loop_impl.rs  mod.rs  rubric.rs
crates/sentinel-core/src/reasoning_index/: builder.rs  mod.rs  node.rs  search.rs  tree_index.rs
crates/sentinel-core/src/split_agent/: contract_proof.rs  mod.rs  repair.rs
crates/sentinel-core/src/storage/: manifold_store.rs  mod.rs
crates/sentinel-core/src/telemetry/: events.rs  mod.rs  storage.rs
crates/sentinel-core/tests/: e2e.rs  e2e_context_compaction_test.rs  e2e_onboarding_test.rs  e2e_outcome_compiler_test.rs  e2e_quality_loop_test.rs  e2e_split_agent_test.rs  mod.rs  quality_loop_test.rs
crates/sentinel-gateway/: Cargo.toml
crates/sentinel-gateway/src/: channel.rs  config.rs  error.rs  gateway.rs  lib.rs  oauth.rs  security.rs  session.rs  skills.rs
crates/sentinel-gateway/static/: index.html
crates/sentinel-sandbox/: Cargo.toml
crates/sentinel-sandbox/src/: lib.rs
docs/: ATOMIC_TRUTH_VISION.md  AUGMENT_MCP_COMMERCIAL_SAFE_INTEGRATION.md  FEATURES_IN_MINIMAL_UI.md  IMPLEMENTATION_STATUS_2026-02-08.md  IMPLEMENTATION_STATUS_2026-02-17.md  IMPLEMENTATION_STATUS_2026-02-18.md  IMPROVEMENTS_SUMMARY.md  LIVE_PREVIEW_IMPLEMENTATION.md  MULTI_AGENT_REALITY_CHECK.md  MULTI_PROVIDER_SETUP.md  NEW_KILLER_FEATURES.md  PHASE2_WORLD_MODEL.md  PROVIDER_CONFIGURATION_UI.md  SENTINEL_SWARM_VISION.md  SENTINEL_VALIDATION_REPORT.md  SWARM_COMPLETION_REPORT.md  SWARM_IMPLEMENTATION_PLAN.md  SWARM_QUICKSTART.md  UI_REFACTORING_WORLD_CLASS.md  UI_REFACTORING_WORLD_CLASS_V2.md  WAVE3_IMPLEMENTATION_GUIDE.md  competitive-analysis.md
docs/archive/: ITERATION2_PLAN.md  LAYER6_PLAN.md  LAYER8_PLAN.md
examples/: multi_provider_example.rs  swarm_auth_example.rs  swarm_real_test.rs
examples/dashboard-mock/: data.json  index.html  index_offline.html
examples/vscode-pinned-transcript/: README.md
examples/vscode-quality-dashboard/: README.md
integrations/vscode/: .vscodeignore  README.md  VSCODE_EXTENSION_TEST_GUIDE.md  esbuild.js  package-lock.json  package.json  sentinel-vscode-0.1.0.vsix  (+8 more)
scripts/: build_extension.sh  check_secrets_staged.sh  ci_quality_gates.sh  gemini_cli_proxy.py  universal_protocol_test.py  validate_sentinel.sh  world_class_harness.sh
sdks/: README.md
sdks/python/: pyproject.toml
sdks/python/examples/: basic_usage.py
sdks/python/sentinel_sdk/: __init__.py  client.py  types.py
tests/: test_llm_e2e.py  test_sdk_integration.py  test_vscode_extension.py
todo-app/: index.html
(+275 files in other folders)
