[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Team <hello@sentinel-protocol.org>"]
license = "MIT"
repository = "https://github.com/JoyciAkira/SENTINEL"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography
blake3 = "1.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
