[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Team <hello@sentinel-protocol.org>"]
license = "MIT"
repository = "https://github.com/JoyciAkira/SENTINEL"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = "2.0"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-util = { version = "0.7", features = ["codec"] }
prost = "0.12"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "macros", "tokio"] }
futures = "0.3"

# Cryptography
blake3 = "1.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
