[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-cli",
    "crates/sentinel-agent-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Team <hello@sentinel-protocol.org>"]
license = "MIT"
repository = "https://github.com/JoyciAkira/SENTINEL"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Cryptography
blake3 = "1.5"
ed25519-dalek = "2.0"

# P2P Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "macros", "tokio"] }
prost = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }

# Async runtime
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Code generation (Tree-Sitter)
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"

# Web scraping
scraper = "0.18"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
