[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for Sentinel - Goal-aligned AI coding agent"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
blake3.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { workspace = true }
scraper = { workspace = true }

# Graph data structures
petgraph = "0.6"

# Additional utilities
hex = "0.4"
rand = "0.8"
ed25519-dalek = "2.0"
rand_core = { version = "0.6", features = ["getrandom"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "macros", "tokio"] }
futures = "0.3"

# Knowledge Base (Neo4j) - Commented out for in-memory version
# neo4rs = "0.7"

# World-class embeddings (100% local, no API costs)
# Using Candle (pure Rust) for embeddings to avoid C++ dependency hell
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = "0.4"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
